<resources>
    <string name="app_name">AlbumNFTs</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_fallo_registro">Falló la creación del usuario</string>
    <string name="msg_fallo_login">Falló la autenticación del usuario</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_album">AlbumNFTs</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre">Nombre del NFT</string>
    <string name="msg_precio">Precio </string>
    <string name="msg_cantidad">Cantidad </string>
    <string name="msg_color">Color</string>
    <string name="bt_addAlbum">Agregar NFT</string>
    <string name="bt_updateAlbum">Actualizar NFT</string>
    <string name="msg_album_added">NFT agregado</string>
    <string name="msg_data">Faltan datos!!</string>
    <string name="msg_album_update">NFT actualizado!!</string>
    <string name="delete">Eliminar NFT</string>
    <string name="seguroBorrar">"¿Está seguro de eliminar el NFT "</string>
    <string name="si">Si</string>
    <string name="no">No</string>

    <string name="msg_enviar_correo">Enviar correo electrónico</string>
    <string name="msg_phone_call">Realizar llamada telefónica</string>
    <string name="msg_whatsapp_send">Enviar mensaje WhatsApp</string>
    <string name="msg_web_view">Abrir sitio Web</string>
    <string name="msg_map_view">Ver album en mapa</string>
    <string name="tv_latitud_lb">Latitud</string>
    <string name="tv_longitud_lb">Longitud</string>
    <string name="tv_altura_lb">Altura</string>
    <string name="msg_saludos">Saludos amigos</string>
    <string name="msg_mensaje_correo">Le escribo este correo para</string>
    <string name="msg_datos">Faltan datos</string>
    <string name="error">Error</string>

    <string name="msgEscucharAudio">Escuchar nota de audio</string>
    <string name="msg_imagen">Imagen del album</string>
    <string name="graba_pausa">Graba o pausa grabación</string>
    <string name="escuchaPlay">Escucha grabación</string>
    <string name="delete_nota">Borra nota de audio</string>
    <string name="play_nota">Escuchar nota de audio</string>
    <string name="rec_stop_nota">Graba o detiene nota de audio</string>
    <string name="take_photo">Toma foto</string>
    <string name="rotate_l">Rota izquierda</string>
    <string name="rotale_r">Rota a la derecha</string>
    <string name="msg_graba_audio">Grabando nota de audio</string>
    <string name="msg_detener_audio">Nota de audio detenida</string>
    <string name="msg_subiendo_audio">Subiendo Nota Audio</string>
    <string name="msg_subiendo_imagen">Subiendo imagen</string>
    <string name="todo">POr definir</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="action_signout">Sign Out</string>
    <string name="menu_delete">Delete</string>
    <string name="update_place">update</string>
    <string name="success_save">Se guardo la imagen en Firebase con exito!!</string>
    <string name="fail_save">No se pudo guardar la imagen con exito</string>
</resources>