<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_album">

    <fragment
        android:id="@+id/nav_album"
        android:name="com.example.albumnfts.ui.album.AlbumFragment"
        android:label="@string/menu_album"
        tools:layout="@layout/fragment_album" >
        <action
            android:id="@+id/action_nav_album_to_addAlbumFragment"
            app:destination="@id/addAlbumFragment" />
        <action
            android:id="@+id/action_nav_album_to_updateAlbumFragment"
            app:destination="@id/updateAlbumFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.albumnfts.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.albumnfts.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addAlbumFragment"
        android:name="com.example.albumnfts.ui.album.AddAlbumFragment"
        android:label="fragment_add_album"
        tools:layout="@layout/fragment_add_album" >
        <action
            android:id="@+id/action_addAlbumFragment_to_nav_album"
            app:destination="@id/nav_album" />
    </fragment>
    <fragment
        android:id="@+id/updateAlbumFragment"
        android:name="com.example.albumnfts.ui.album.UpdateAlbumFragment"
        android:label="@string/update_place"
        tools:layout="@layout/fragment_update_album" >
        <action
            android:id="@+id/action_updateAlbumFragment_to_nav_album"
            app:destination="@id/nav_album" />
        <argument
            android:name="album"
            app:argType="com.example.albumnfts.model.Album" />
    </fragment>
</navigation>